--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "the nacos integration in nestjs ",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rimraf -rf dist && tsc -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "@nestjs/common": "10.3.0",
     "@nestjs/core": "10.3.0",
     "@nestjs/testing": "10.3.0",
-    "@types/node": "^20.10.6"
+    "@types/node": "^20.10.6",
+    "rimraf": "^5.0.5"
   }
 }
