--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,9 +10,9 @@
     "target": "ES2021",
     "sourceMap": false,
     "outDir": "./dist",
-    "rootDir": "./lib",
+    "rootDir": "./src",
     "skipLibCheck": true
   },
-  "include": ["lib/**/*"],
+  "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts", "tests"]
 }
