--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nestjs-nacos",
-  "version": "1.0.0",
-  "description": "the nacos integration in nestjs ",
-  "main": "index.js",
+  "version": "1.0.2",
+  "description": "the nacos integration in nestjs",
+  "main": "dist/config.module.js",
   "scripts": {
     "dev": "tsc -p tsconfig.json --watch",
     "build": "rimraf -rf dist && tsc -p tsconfig.json"
